# guile-greetd

./: .gitignore  AUTHORS  Makefile.am  configure.ac  guix.scm
.github/workflows/: guile2.2.yml  guile3.0.yml
build-aux/am/: guile.am  guilec
modules/greetd/: Makefile.am  protocol.scm  transport.scm
scripts/: Makefile.am  agreety.in
